# COMP8051-MegaMan-1-Recreation

./: CMakeLists.txt  README.md
Assets/: CutManMap.tmx  CutManMapProject.tiled-session  CutManTileset.tsx  Map.tmx  flying_shell_projectile.aseprite  megaman_health_bar.aseprite
Assets/Animations/: beak_anim.aseprite  beak_anim.xml  big_eye_anim.xml  blader_anim.xml  enemy_death_anim.aseprite  enemy_death_anim.xml  flea_anim.xml  flying_shell_anim.aseprite  flying_shell_anim.xml  fox_animations.xml  large_health_anim.xml  megaman_anim.aseprite  megaman_anim.xml  megaman_hit_particles_anim.aseprite  megaman_hit_particles_anim.xml  megaman_title_screen_anim.xml  octopus_battery_anim.xml  screw_bomber_anim.xml  super_cutter_anim.xml  victory_item_anim.xml
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/event/: AudioEventQueue.h  BaseEvent.h  EventManager.h
src/ecs/system/: AnimationSystem.h  AutoFiringSystem.h  BladerAttackSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  CoyoteTimeSystem.h  DamageSystem.cpp  DamageSystem.h  DebugTeleportSystem.cpp  DestructionSystem.cpp  DestructionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  FlashTimerSystem.h  FlashWhileInvulnerableSystem.h  FollowEntitySystem.h  GravitySystem.h  HitKnockbackSystem.h  InvulnerabilityTimerSystem.h  InvulnerableWhileNotFiringSystem.h  IsFiringTimerSystem.h  KeyboardInputSystem.cpp  KeyboardInputSystem.h  LadderClimbingSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MoveTowardsPlayerSystem.h  MovementSystem.h  OctopusBatterySystem.h  RenderSystem.h  SceneTransitionDelaySystem.h  SpawnWhileVisibleTimerSystem.h  UIRenderSystem.h  UpdateSceneStateSystem.cpp
src/ecs/system/AnimationSystems/: AnimationClip.h  AnimationSystem.h  BeakAnimationSystem.h  BladerAnimationSystem.h  FlyingShellAnimationSystem.h  OctopusBatteryAnimationSystem.h  PlayerAnimationSystem.h  SuperCutterAnimationSystem.h  TitleScreenAnimationSystem.h
src/ecs/system/Combat/: AutoFiringSystem.h  DamageSystem.cpp  HealOvertimeSystem.cpp  HealOvertimeSystem.h  HitKnockbackSystem.h  IsFiringTimerSystem.h
src/ecs/system/ERS/: CollisionSystem.cpp  DestructionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  OnDestroyEvent.cpp  OnDestroyEvent.h  OnEnemyCollisionEvent.cpp  OnEnemyCollisionEvent.h  OnItemCollisionEvent.cpp  OnItemCollisionEvent.h  OnPlayerCollisionEvent.cpp  OnPlayerCollisionEvent.h
src/ecs/system/Enemy/: BladerAttackSystem.h  OctopusBatterySystem.h  SpawnOnVisibleSystem.h  SpawnTimerSystem.h
src/ecs/system/Movement/: AutoJumpSystem.h  FollowParentSystem.h  GravitySystem.h  JumpSystem.h  MoveTowardsPlayerSystem.h  MovementSystem.h  StopMovementWhileFiringSystem.h  TrackPlayer.h
src/ecs/system/Player/: DebugTeleportSystem.cpp  DebugTeleportSystem.h  KeyboardInputSystem.h  (+3 more)
src/manager/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Scene.cpp  Scene.h  SceneManager.h
src/scene/: Scene.cpp  Scene.h  SceneType.h  SpawnBeakEnemy.cpp  SpawnBeakEnemy.h  SpawnBigEyeEnemy.cpp  SpawnBigEyeEnemy.h  SpawnBladerEnemy.cpp  SpawnBladerEnemy.h  SpawnEnemyDeathAnimation.cpp  SpawnEnemyDeathAnimation.h  SpawnFleaEnemy.cpp  SpawnFleaEnemy.h  SpawnFlyingShellEnemy.cpp  SpawnFlyingShellEnemy.h  SpawnItem.cpp  SpawnItem.h  SpawnOctopusBatteryEnemy.cpp  SpawnOctopusBatteryEnemy.h  SpawnPlayer.cpp  SpawnPlayer.h  SpawnScrewBomberEnemy.cpp  SpawnScrewBomberEnemy.h  SpawnSuperCutterEnemy.cpp  SpawnSuperCutterEnemy.h
src/utils/: AspectRatioUtil.cpp  AspectRatioUtil.h  Collision.cpp  Collision.h  RenderUtils.h  Vector2D.cpp  Vector2D.h  Vector2DTest.cpp  Vector2DTest.h
(+22 files in other folders)
